[package]
name = "font"
version = "0.1.0"
authors = ["Corendos <corentin.godeau37@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freetype-rs = "0.23.0"
image = "0.22.4"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "benchmark"
harness = false
